Deployment-svc-certi-issuer-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  labels:
    app: wisecow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: amolsontakke96/accuknox-devops-trainee-practical-assessment:latest
        ports:
        - containerPort: 4499
---
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow
  ports:
    - port: 80
      targetPort: 4499
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    cert-manager.io/cluster-issuer: "test-selfsigned"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
      - wish.amolsontakke-testing.com
    secretName: selfsigned-cert-tls
  ingressClassName: nginx
  rules:
  - host: "wish.amolsontakke-testing.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wisecow-service
            port:
              number: 80
