certi-issuer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    cert-manager.io/cluster-issuer: "test-selfsigned"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - wisecow.amolsontakke-testing.com
    secretName: selfsigned-cert-tls
  rules:
  - host: "wisecow.amolsontakke-testing.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wisecow-service
            port:
              number: 80
