wiscow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - wisecow.amolsontakke-testing.com
    secretName: wiscow-ingree-tls
  rules:
  - host: "wisecow.amolsontakke-testing.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wisecow-service
            port:
              number: 4499
